--- a/app/views/application/_compose.html.erb
+++ b/app/views/application/_compose.html.erb
@@ -7,7 +7,12 @@
       <div class="modal-body">
         <div class="form-group">
           <label for="recipient" class="control-label">Recipient</label>
-          <input type="text" required class="form-control" id="composeRecipient" name="recipient" placeholder="Phantasma address" autocomplete="off" />
+          <input type="text" required class="form-control" id="composeRecipient" name="recipient" placeholder="Mailbox name" autocomplete="off" />
+        </div>
+
+        <div class="form-group">
+          <label for="subject" class="control-label">Subject</label>
+          <input type="text" required class="form-control" id="composeSubject" name="subject" placeholder="Welcome to Phantasma" autocomplete="off" />
         </div>
 
         <div class="form-group">
@@ -38,9 +43,10 @@ PH.afterLoad(function() {
     document.getElementById('composeSubmitBtn').className += ' disabled';
 
     var recipient = document.getElementById('composeRecipient').value;
+    var subject = document.getElementById('composeSubject').value;
     var message = document.getElementById('composeMessage').value;
 
-    PH.contract.sendMessage(recipient, message, function() {
+    PH.contract.sendMessage(recipient, message, recipient, function() {
       document.getElementById('composeCancelBtn').className = document.getElementById('composeCancelBtn').className.replace(' disabled', '');
       document.getElementById('composeSubmitBtn').className = document.getElementById('composeSubmitBtn').className.replace(' disabled', '');
 
