--- a/app/views/application/_compose.html.erb
+++ b/app/views/application/_compose.html.erb
@@ -12,12 +12,12 @@
 
         <div class="form-group">
           <label for="subject" class="control-label">Subject</label>
-          <input type="text" required class="form-control" id="composeSubject" name="subject" placeholder="Welcome to Phantasma" autocomplete="off" />
+          <input type="text" required class="form-control" id="composeSubject" name="subject" autocomplete="off" />
         </div>
 
         <div class="form-group">
           <label for="message" class="control-label">Message</label>
-          <input type="text" required class="form-control" id="composeMessage" name="message" placeholder="Welcome to Phantasma" autocomplete="off" />
+          <input type="text" required class="form-control" id="composeMessage" name="message" autocomplete="off" />
         </div>
       </div>
       <div class="modal-footer">
